--- a/src/styles/createForm.css
+++ b/src/styles/createForm.css
@@ -8,3 +8,7 @@
 .MuiFormControl-root .css-pu4sxn-MuiTypography-root {
     font-size: 0.75rem;
 }
+
+.disabled-label {
+    color: rgba(0, 0, 0, 0.38) !important;
+}
