--- a/src/styles/settings.css
+++ b/src/styles/settings.css
@@ -1,10 +1,10 @@
 .setting-container {
   width: 100%;
-  height: max-content;
   border: 1px solid #e9e9e9;
-  margin-top: 30px;
   padding: 40px;
   border-radius: 8px;
+  height: 70vh;
+  overflow-y: auto;
 }
 
 .logo-container {
