--- a/src/styles/productCard.css
+++ b/src/styles/productCard.css
@@ -1,7 +1,7 @@
 .card-container {
-    width: fit-content;
+    /* width: fit-content; */
     border-radius: 8px;
-    box-shadow: 0px 5px 20px 0px #b0b0b0;
+    box-shadow: 0px 2px 5px 0px #b0b0b0;
 }
 
 .image-container {
@@ -9,7 +9,7 @@
 }
 
 .image-container img {
-    width: 400px;
+    width: 100%;
     height: 300px;
     border-radius: 8px;
     object-fit: cover;
