--- a/src/styles/dashboard.css
+++ b/src/styles/dashboard.css
@@ -9,10 +9,11 @@ main.MuiBox-root.css-jx4u1d {
 .anlytics-box-container {
     padding: 25px;
     box-shadow: -1px 2px 10px #d8d8d8;
+    border-radius: 8px;
 }
 
 .analytics-main-heading .heading {
-    font-size: 13px;
+    font-size: 12px;
     font-weight: 600;
     color: #797979;
 }
@@ -20,4 +21,19 @@ main.MuiBox-root.css-jx4u1d {
 .anlytics-box-container .inner-heading {
     font-size: 12px;
     color: #797979;
+}
+
+.analytics-main-heading {
+    display: flex;
+    justify-content: space-between;
+}
+
+.analytics-main-heading .MuiButtonBase-root {
+    height: 60px;
+    width: 60px;
+    border-radius: 50%;
+    margin: auto 0;
+    background-color: #4858a0;
+    color: #fff;
+    margin-right: 20px;
 }
